# dashboard-chat

./: .bazelignore  .bazelrc  .claudeignore  .gitignore  .lintstagedrc.json  .secrets.baseline  App.tsx  BUILD.bazel  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CLAUDE_REFERENCE.md  MODULE.bazel  Makefile  README.md  bazel-dashboard_chat  city.toml  docker-compose.dev-no-org.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.workos.yml  docker-compose.yml  eslint.config.js  index.html  index.ts  manifest  pack.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts  wrangler.toml
agent/: BUILD.bazel  index.ts  lint_test.sh  package.json  tsconfig.json  version.ts
agent/lib/: auth.test.ts  auth.ts  log.ts  openapi.ts
agent/test/: multi-replica.test.ts  openapi.test.ts
auth-proxy/: BUILD.bazel  Dockerfile  Dockerfile.dev  README.md  app.test.ts  app.ts  auth-decision-logging.test.ts  index.test.ts  index.ts  kpi-and-startup-unchanged.test.ts  lint_test.sh  m2m-issuance.test.ts  openapi.test.ts  org-create-reissue.test.ts  package.json  pat-issuance.test.ts  tsconfig.json  user-token-issuance.test.ts
auth-proxy/lib/: auth.test.ts  auth.ts  cookies.test.ts  cookies.ts  correlation.test.ts  correlation.ts  keypair.ts  log.test.ts  log.ts  m2m.test.ts  m2m.ts  openapi.ts  org-create-workflow.test.ts  org-create-workflow.ts  pat.ts  post-response-reissue.test.ts  post-response-reissue.ts  schemas.ts  secrets.test.ts  secrets.ts  session-store.test.ts  session-store.ts  user-token.test.ts  user-token.ts
auth-proxy/test/: docker-compose.multi-replica.yml  multi-replica.test.ts
backend/: .env.example  BUILD.bazel  Dockerfile  lint_test.sh  pyproject.toml  pytest_tests.bzl  requirements.txt  requirements_dev_lock.txt  requirements_lock.txt  run.sh  server.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  db_context.py  exceptions.py  main.py  types.py  version.py
backend/migrations/: alembic.ini  env.py
backend/scripts/: backfill_project_memories.py  export_openapi.py  pg_duckdb_init.sql  setup_dev.py
backend/sql/: init-query-engine.sql
backend/tests/: conftest.py  test_database.py  test_dataset_upload.py  test_mappers.py  test_migration_017_round_trip.py  test_migration_018_round_trip.py  test_migration_019_round_trip.py  test_migration_020_round_trip.py  test_models.py  test_pipelines.py  uuidv7_fixtures.py
cyrus/: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
cyrus/infra/: .gitignore  README.md  app.py  pyproject.toml  pyrightconfig.json
cyrus/patches/: cyrus-claude-runner+0.2.65.patch
cyrus/proxy/: __init__.py  __main__.py  config.py  execution_loop.py  http_forwarder.py  linear_signature.py  logging_config.py  messages.py
cyrus/tests/: conftest.py  test_ack_handler_registry.py  test_canary_feed.py  test_http_forwarder.py  test_iot_config.py  test_iot_config_selection.py  test_iot_connection.py  test_iot_connection_builder.py  test_iot_linear_webhook_feed.py  test_iot_packet.py  test_proxy_execution_loop.py  test_sqs_linear_webhook_feed.py
cyrus/webhook_feeds/: __init__.py  canary_feed.py  iot_feed.py  sqs_feed.py
dashboard_chat_sdk/: .gitignore  BUILD.bazel  README.md  openapi.json  pyproject.toml
dashboard_chat_sdk/scripts/: codegen-config.yaml  regenerate.sh  sdk-smoke-test.py
dashboard_chat_sdk/tests/: test_client.py
e2e/: BUILD.bazel  global-setup.ts  pipeline-flow.spec.ts  run-e2e.sh  smoke.spec.ts
e2e/auth/: activity-check.spec.ts  token-refresh.spec.ts
e2e/config/: local.config.ts  production.config.ts
e2e/data-cleaning/: column-alias.spec.ts  trim-and-case.spec.ts
e2e/dataset-upload/: upload-flow.spec.ts
e2e/fixtures/: auth.fixture.ts  navigation.fixture.ts  test-fixtures.ts
e2e/helpers/: chat.helper.ts  table.helper.ts  wait.helper.ts
e2e/table-operations/: add-row.spec.ts  complex-prompts.spec.ts  delete-row.spec.ts  filter.spec.ts  sort.spec.ts
flow-state/: BUILD.bazel  Dockerfile  index.test.ts  index.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
flow-state/lib/: active-scope.test.ts  active-scope.ts  orchestrator.test.ts  orchestrator.ts  projection.test.ts  projection.ts
frontend/: App.module.css  App.tsx  BUILD.bazel  docker-entrypoint.sh  index.css  lint_test.sh  main.tsx  nginx.conf  package-lock.json  package.json  ssr.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vite_build.sh  vitest.config.core-chat.ts  vitest.config.core-datacatalog.ts  vitest.config.core-toolcalls.ts  vitest.config.lib.ts  vitest.config.ts  vitest.config.ui-context.ts  vitest.config.ui-hooks.ts
frontend/app/: root.test.tsx  root.tsx  routes.ts
frontend/public/: test-sse.html
frontend/src/: stream-chat.d.ts
planner/: README.md  pyproject.toml
planner/planner/: cli.py  config.py
planner/tests/: conftest.py  test_cli.py  test_renderer.py  test_schema.py  test_warehouse.py
reverse-proxy/: BUILD.bazel  lint_test.sh  nginx.conf  package.json  vite_build.sh  vitest.config.core-auth.ts  vitest.config.ts  vitest.config.ui-components.ts
shared/failure-simulation/: BUILD.bazel  audit.d.ts  audit.js  gate.d.ts  gate.js  index.d.ts  index.js  knob.d.ts  knob.js  manifest.d.ts  manifest.js  manifest.schema.d.ts  manifest.schema.js  manifest.ts  package.json  registry.d.ts  registry.js  tsconfig.json
shared/logging/: BUILD.bazel  index.ts  level.test.ts  level.ts  log.ts  package.json  redaction.test.ts  redaction.ts  tsconfig.json
shared/ui-state-wire/: BUILD.bazel  (+4 more)
ui/: .gitignore  BUILD.bazel  index.html  package.json  react-router.config.ts  server.ts  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
ui-state/: BUILD.bazel  Dockerfile  README.md  config.ts  index.old.test.ts  index.old.ts  index.test.ts  index.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
worker/: BUILD.bazel  handleFetch.test.ts  index.ts  lint_test.sh  package.json  tsconfig.json  vitest.config.ts
(+3475 files in other folders)
