load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

# ─── Top-level Aliases ───────────────────────────────────────────────────────

alias(
    name = "images",
    actual = ":all_images",
    tags = ["manual"],
)

# Selector-driven test dispatcher. See //tools/test:test for selector flags.
alias(
    name = "test",
    actual = "//tools/test:test",
    tags = ["manual"],
)

exports_files([
    "docker-compose.yml",
    ".env",
    "eslint.config.js",
    "package.json",
])

# Build all OCI image tarballs
filegroup(
    name = "all_images",
    tags = ["manual"],
    srcs = [
        "//backend:image_tar",
        "//reverse-proxy:image_tar",
        "//ui:ssr_image_tar",
        "//agent:image_tar",
        "//auth-proxy:image_tar",
    ],
)
