load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools:version_layer.bzl", "version_layer")

npm_link_all_packages()

js_library(
    name = "lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ) + [
        "tsconfig.json",
        "package.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)

sh_test(
    name = "lint",
    srcs = ["lint_test.sh"],
    data = [
        "//:eslint.config.js",
        "//:package.json",
        "package.json",
        "tsconfig.json",
    ] + glob(["**/*.ts"]),
    tags = ["no-sandbox", "lint"],
    size = "small",
)

vitest_bin.vitest_test(
    name = "test",
    args = ["run", "--config", "vitest.config.ts"],
    chdir = package_name(),
    data = [
        ":lib",
        "vitest.config.ts",
        "package.json",
        "tsconfig.json",
        "//:node_modules/vitest",
        # Sync test reads frontend/src/core/chat/events.ts as a string to detect
        # drift between the duplicated schemas (dc-bj2.1 / TWD-8 option 1).
        "//frontend:chat_events_ts",
    ] + glob(["**/*.test.ts"]) + [":node_modules"],
    size = "small",
)

# ─── OCI Image ───────────────────────────────────────────────────────────────

# Bundle agent to a single JS file via esbuild (same pattern as frontend Vite build)
genrule(
    name = "dist",
    srcs = [":lib"],
    outs = ["dist.tar"],
    cmd = """
        cd agent && \
        npx esbuild index.ts --bundle --platform=node --format=esm \
            --outfile=../$$TMPDIR/app/agent/index.mjs && \
        tar -cf - -C ../$$TMPDIR app > ../$(OUTS)
    """,
    tags = ["no-sandbox", "manual"],
)

version_layer(
    name = "version_layer",
    image_tag = "dashboard-chat/agent:bazel",
)

oci_image(
    name = "image",
    base = "@node_20_slim",
    tars = [
        ":dist",
        ":version_layer",
    ],
    workdir = "/app",
    entrypoint = ["node", "agent/index.mjs"],
    exposed_ports = ["8787"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "image_tar",
    image = ":image",
    repo_tags = ["dashboard-chat/agent:bazel"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
