load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools:version_layer.bzl", "version_layer")

npm_link_all_packages()

js_library(
    name = "lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ) + [
        "tsconfig.json",
        "package.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
        "//shared/chat:lib",
    ],
)

sh_test(
    name = "lint",
    srcs = ["lint_test.sh"],
    data = [
        "//:eslint.config.js",
        "//:package.json",
        "package.json",
        "tsconfig.json",
    ] + glob(["**/*.ts"]),
    tags = ["no-sandbox", "lint"],
    size = "small",
)

vitest_bin.vitest_test(
    name = "test",
    args = ["run", "--config", "vitest.config.ts"],
    chdir = package_name(),
    data = [
        ":lib",
        "vitest.config.ts",
        "package.json",
        "tsconfig.json",
        "//:node_modules/vitest",
    ] + glob(["**/*.test.ts"]) + [":node_modules"],
    size = "small",
)

# ─── OCI Image ───────────────────────────────────────────────────────────────

# Bundle agent to a single JS file via esbuild (same pattern as frontend Vite build)
genrule(
    name = "dist",
    srcs = [":lib"],
    outs = ["dist.tar"],
    # `--banner:js` polyfills CommonJS `require` inside the ESM bundle so
    # transitively-bundled CJS deps (ioredis -> 'events', 'net', etc.) can
    # still load Node built-ins at runtime. Without it, ioredis's
    # `require('events')` throws "Dynamic require of 'events' is not
    # supported" the moment the agent process boots — the failure surfaces
    # only under `docker compose up` (unit tests use ioredis-mock and never
    # exercise the bundled image). Added by F.3 (dc-qj9.1.3); F.2 added
    # ioredis but never ran the bundled agent, so the regression slipped in
    # earlier.
    cmd = """
        cd agent && \
        npx esbuild index.ts --bundle --platform=node --format=esm \
            --banner:js="import{createRequire}from'module';const require=createRequire(import.meta.url);" \
            --outfile=../$$TMPDIR/app/agent/index.mjs && \
        tar -cf - -C ../$$TMPDIR app > ../$(OUTS)
    """,
    tags = ["no-sandbox", "manual"],
)

version_layer(
    name = "version_layer",
    image_tag = "dashboard-chat/agent:bazel",
)

oci_image(
    name = "image",
    base = "@node_20_slim",
    tars = [
        ":dist",
        ":version_layer",
    ],
    workdir = "/app",
    entrypoint = ["node", "agent/index.mjs"],
    exposed_ports = ["8787"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "image_tar",
    image = ":image",
    repo_tags = ["dashboard-chat/agent:bazel"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
