load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")

npm_link_all_packages()

js_library(
    name = "lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ) + [
        "tsconfig.json",
        "package.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)

vitest_bin.vitest_test(
    name = "test",
    args = ["run", "--config", "vitest.config.ts"],
    chdir = package_name(),
    data = [
        ":lib",
        "vitest.config.ts",
        "package.json",
        "tsconfig.json",
        "//:node_modules/vitest",
    ] + glob(["**/*.test.ts"]) + [":node_modules"],
    size = "small",
)
