[project]
name = "dashboard-chat-backend"
version = "0.1.0"
description = "Backend API for Dashboard Chat"
requires-python = ">=3.11,<3.13"
dependencies = [
    # FastAPI and server
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "python-multipart==0.0.9",

    # Database
    "sqlalchemy[asyncio]==2.0.25",
    "asyncpg==0.29.0",
    "aiosqlite==0.19.0",
    "alembic==1.13.1",

    # Data processing
    "pandas==2.2.0",

    # Pydantic
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",

    # Functional programming
    "returns==0.22.0",

    # Testing
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio==0.23.4",
    "moto[s3]>=5.0.0",

    # DuckDB for local file-based data
    "duckdb==1.0.0",

    # Data lake storage
    "boto3==1.34.0",
    "ibis-framework[duckdb]==9.5.0",
    "pyarrow==17.0.0",

    # UUIDs
    "uuid-utils>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
